-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.2.0 Beta1 , 5.2.0 RC1, 5.2.0
-
None
-
Mac OS (10.9 at least, haven't tested in others)
-
-
6cbbd1f93d369059e16c62f4b8ba60ad3407d886
Opening a contextual QMenu and switching application with cmd-tab keeps showing the contextual menu. Standard behaviour is to hid the menu when the application loses focus. See screen shots. Can be replicated in Qt Creator shipped with Qt versions above.
- relates to
-
QTBUG-35904 REG: Mac OS: Expanded ComboBox stays on top even application is changed.
-
- Closed
-
For Gerrit Dashboard: QTBUG-35820 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
75393,1 | Cocoa: Popups should not become key | stable | qt/qtbase | Status: ABANDONED | 0 | 0 |
75440,1 | Cocoa: Popups should not become key | release | qt/qtbase | Status: MERGED | +2 | 0 |
77644,1 | Cocoa: Popups should not become key | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |